[metadata]
name = clank
author = Ryan Bourgeois
author-email = bluedragonx@gmail.com
summary = A library to quickly build monolithic commandline tools.
license = BSD-Modified
description-file = README.md
keywords = cli console
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2

[flake8]
max-line-length = 99
